SCMOD-4732: Add repository configuration endpoints (#53)
* SCMOD-4732: added repositories' endpoints to the swagger file

* SCMOD-4732: added controller for the repository scope

* SCMOD-4732: added check for tenant id in the setRepositoryConfig

The tenant table has a foreign key that prevents the insert of tenant_ids that do not have a key in the global config table; however, the repository table does not have this constraint.
I have added a check for the tenant_id and key, if they exist in the tenant table, then we can go on and create/update the repository configuration.

* SCMOD-4732: added check for tenant id in the setRepositoryConfig (missed one file in the commit)

The tenant table has a foreign key that prevents the insert of tenant_ids that do not have a key in the global config table; however, the repository table does not have this constraint.
I have added a check for the tenant_id and key, if they exist in the tenant table, then we can go on and create/update the repository configuration.

* SCMOD-4732: setRepositoryConfig fixed

* SCMOD-4732: fixed setRepositoryConfigs in the controller - All methods working

* SCMOD-4732: logic to handle the scope column in the global config has been added

* by default it is populated with 0
* if the global config is created with scope "REPOSITORY", the scope column is set to 1
* when a repository scope is created, if the corresponding key in the global config has scope == 1, then it is created, otherwise it fails
* when retrieving the global config, the scope is set correctly to REPOSITORY, if the column contains 1
* swagger has been updated with the new allowed word

* SCMOD-4732: Andy mod

* SCMOD-4732: added integration tests

* SCMOD-4732: modified getEffectiveRepositoryConfigs

The previous code was failing one test on Jenkins.

* SCMOD-4732: getEffectiveRepositoryConfig modified

It now follows a pattern similar to getEffetiveRepositoryConfigs

* SCMOD-4732: documentation
